// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`helpfeel No head \`?\` is not helpfeel 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "raw": "a ? not helpfeel",
        "text": "a ? not helpfeel",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`helpfeel Quoted ? is not helpfeel 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "nodes": [
          {
            "raw": " ? Quoted",
            "text": " ? Quoted",
            "type": "plain",
          },
        ],
        "raw": "> ? Quoted",
        "type": "quote",
      },
    ],
    "type": "line",
  },
]
`;

exports[`helpfeel Simple helpfeel 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "raw": "? Simple helpfeel",
        "text": "Simple helpfeel",
        "type": "helpfeel",
      },
    ],
    "type": "line",
  },
]
`;
